customization of the template to fit the layout for CIMeC doctoral theses.

--- a/main.tex
+++ b/main.tex
@@ -57,6 +57,8 @@
   \frontmatter
   \pagenumbering{Roman}
   \tableofcontents
+  \listoftables
+  \listoffigures
   \clearpage
   \begingroup
   \pagestyle{empty}
@@ -77,6 +79,9 @@
   % Abstract
   \input{etc/abstract.tex}
 
+
+  %List of Pubblications
+  \input{etc/publications.tex}
 
   % Chapters
   \input{chapters/examples.tex}
