--- a/etc/cover.tex
+++ b/etc/cover.tex
@@ -8,14 +8,13 @@
     \includegraphics[width=.6\textwidth]{images/logo/unitn.png}
   \end{figure}
 
-  \vspace{2 cm}
-  \LARGE{Department of Information Engineering and Computer Science\\}
-
   \vspace{1 cm}
-  \Large{Master's Degree in\\ Computer Science}
+  \LARGE{\textbf{CIMeC - Center for Mind/Brain Science}\\}
+
+
 
   \vspace{2 cm}
-  \Large\textsc{Final Dissertation\\}
+  %\Large\textsc{Final Dissertation\\}
   \vspace{1 cm}
   \Huge\textsc{Title\\}
   \vspace{0.5 em}
@@ -25,10 +24,14 @@
   \begin{tabular*}{\textwidth}{c @{\extracolsep{\fill}} c}
     \Large{Supervisor}    & \Large{Student}      \\
     \Large{Name Surname}  & \Large{Name Surname} \\
-    \Large{Co-Supervisor} & \Large{123456}       \\
+    \Large{Co-Supervisor} \\ %& \Large{123456}       \\
     \Large{Name Surname}  & {}                   \\
   \end{tabular*}
 
+  \vspace{4 cm}
+	\Large{Thesis submitted in fulfillment of the requirements \\
+	for the degree of Doctor of Philosophy in the \\ Doctorate in Cognitive and Brain Sciences}
+
   \vspace{2 cm}
-  \Large{Academic year 2022/2023}
+  \Large{\today}
 \end{center}
