--- a/etc/cover.tex
+++ b/etc/cover.tex
@@ -9,7 +9,7 @@
   \end{figure}
 
   \vspace{1 cm}
-  \LARGE{\textbf{CIMeC - Center for Mind/Brain Science}\\}
+  \LARGE{\textbf{CIMeC - Center for Mind/Brain Sciences}\\}
 
 
 
